Prepare production readiness backend foundations